--- a/public/index.html
+++ b/public/index.html
@@ -167,12 +167,16 @@ It helps you if you often lose sight of the focused window especially the window
   <a
     href="https://github.com/pqrs-org/Tinkle/blob/main/LICENSE.md"
     target="_blank"
-    class="mx-2"
+    class="mx-2 d-inline-block"
   >
     <img src="images/license-public-domain.svg" alt="Public Domain" />
   </a>
 
-  <a href="/docs/pricing/" target="_blank" class="mx-2">
+  <a
+    href="/docs/pricing/"
+    target="_blank"
+    class="mx-2 d-inline-block"
+  >
     <img src="/images/pricing-free.svg" alt="Free" />
   </a>
 </div>
