--- a/public/index.html
+++ b/public/index.html
@@ -218,7 +218,7 @@ It helps you if you often lose sight of the focused window especially the window
     It helps you if you often lose sight of the focused window especially the
     window is switched by keyboard shortcuts.
   </p>
-  <p class="text-left mx-auto" style="display: inline-block">
+  <p class="text-start mx-auto" style="display: inline-block">
     ✨ Multiple displays environment is fully supported.<br />
     ✨ Delightful effects use macOS Metal API.<br />
   </p>
